fix: Qr code improvement
