# backend/api/docs/swagger.yaml
@@ -279,29 +279,6 @@ paths:
       summary: Pause a peer
       tags:
       - Peers
-  /peers/{name}/qr:
-    get:
-      description: Retrieve a peer's QR code by name.
-      parameters:
-      - description: Peer name
-        in: path
-        name: name
-        required: true
-        type: string
-      produces:
-      - image/png
-      responses:
-        "200":
-          description: Peer QR code
-          schema:
-            type: string
-        "404":
-          description: Peer not found" "System not found
-          schema:
-            $ref: '#/definitions/gin.H'
-      summary: Get a peer's QR code
-      tags:
-      - Peers
   /peers/{name}/reset:
     put:
       description: Reset a peer's usage by name.
